--- a/camp.html
+++ b/camp.html
@@ -15,7 +15,7 @@
       <p>splash billede text HERE!!!!</p>
     </section>
     <section>
-      <div id="gridcon2">
+      <div class="gridcon">
         <div class="griditem">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
@@ -28,7 +28,7 @@
     </section>
 
     <section>
-      <div id="gridcon3">
+      <div class="gridcon">
         <div class="griditem">
           <img src="icon.png" />
         </div>
@@ -42,7 +42,7 @@
       </div>
     </section>
     <section class="prisliste">
-      <div id="gridcon3">
+      <div class="gridcon">
         <div class="griditem">
           <ul>
             <li>251kr</li>
