--- a/internationalt.html
+++ b/internationalt.html
@@ -12,9 +12,10 @@
     <div class="hovedmenu"></div>
     <section class="splash">
       <img src="serveimage.png" />
+      <p>splash billede text goes HERE!!!!!!</p>
     </section>
     <section>
-      <div id="gridcon2">
+      <div class="gridcon">
         <div class="griditem">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
@@ -27,7 +28,7 @@
     </section>
 
     <section>
-      <div id="gridcon3">
+      <div class="gridcon">
         <div class="griditem">
           <img src="icon.png" />
         </div>
@@ -41,7 +42,7 @@
       </div>
     </section>
     <section class="prisliste">
-      <div id="gridcon3">
+      <div class="gridcon">
         <div class="griditem">
           <ul>
             <li>251kr</li>
