--- a/internationalt.html
+++ b/internationalt.html
@@ -30,7 +30,7 @@
     <section>
       <div class="gridcon">
         <div class="griditem">
-          <img src="icon.png" />
+          <img class="underimg" src="img/aktiv4.jpg" />
         </div>
       </div>
       <div class="griditem">
