--- a/uddannelse.html
+++ b/uddannelse.html
@@ -11,7 +11,7 @@
   <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="serveimage.png" />
+      <img src="img/splash_udd.jpg" />
       <p>splash billede text goes HERE!!!!!!</p>
     </section>
     <section>
@@ -30,7 +30,7 @@
     <section>
       <div class="gridcon">
         <div class="griditem">
-          <img src="icon.png" />
+          <img class="underimg" src="img/aktiv2.jpg" />
         </div>
       </div>
       <div class="griditem">
