foootergit add --allgit add --all

--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,16 @@
-<P>DETTET ER EN FOOTER </P>
+<section class="gridcon">
+  <div>
+
+  </div>
+  <div>
+      <div class="gridcon_icons"></div>
+      <a href=""><img class="footer_icons" src="icons/instagram logo.png"></a>
+      <a href=""><img  class="footer_icons" src="icons/youtybe logo.png"></a>
+      <a href=""><img class="footer_icons" src="icons/facebook logo.png"></a>
+    </div>
+  </div>
+</section>
+
+
+
+
