--- a/mobilmenu.html
+++ b/mobilmenu.html
@@ -24,13 +24,21 @@
           but hey, it's pure CSS magic.
           -->
     <ul id="menu">
-      <a href="#"><li>Home</li></a>
-      <a href="#"><li>About</li></a>
-      <a href="#"><li>Info</li></a>
-      <a href="#"><li>Contact</li></a>
-      <a href="https://erikterwan.com/" target="_blank"
-        ><li>Show me more</li></a
-      >
+      <a href="index.html"><img src="img/6.png"/></a>
+      <a href="index.html" class="link">Forside</a>
+      <a class="link" href="om.html">Om os</a>
+      <div class="dropd">
+        <a class="dropbtn link" href="Aktiviteter.html">Aktiviteter</a>
+
+        <div class="dropdownc">
+          <a href="camp.html">Camps</a>
+          <a href="fritidsklub.html">Fritidsklub</a>
+          <a href="uddannelse.html">Uddannelse af lærer</a>
+          <a href="internationalt.html">Internationalt arbejde</a>
+        </div>
+      </div>
+
+      <a class="link" href="kontakt.html">Kontakt</a>
     </ul>
   </div>
 </nav>
