--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="splash">
       <img src="img/splash forside.png" />
       <p>
-        HER SKAL TEXT TIL PLASH BILLEDET STÅ!!
+        Nytænkende Uddannelseskoncepter til Børn og Unge
       </p>
     </section>
 
@@ -21,41 +21,37 @@
       <div id="gridcon">
         <div class="griditem">
           <img src="icons/plant.png" />
+          <h3>Iværksætterfritisklub</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
+            Blooms private fritidsklub for børn 4. klasse og op.
           </p>
           <button>læs mere her</button>
         </div>
         <div class="griditem">
           <img src="icons/tent.png" />
+          <h3>Camps</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
+            Forløb der bygger på børns læring ud fra kreative værksteder,
+            materialer og faciliteter inden for forskellige kunstneriske
+            udtryksformer i ferieperioderne.
           </p>
           <button>læs mere her</button>
         </div>
         <div class="griditem">
           <img src="icons/books.png" />
+          <h3>Undervisningsforløb</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
+            Skoleforløb der bygger på børns læring ud fra kreative værksteder,
+            materialer og faciliteter inden for forskellige kunstneriske
+            udtryksformer.
           </p>
           <button>læs mere her</button>
         </div>
         <div class="griditem">
           <img src="icons/earth.png" />
+          <h3>Internationalt arbejde</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
+            Blooms arbejde på det globale plan.
           </p>
           <button>læs mere her</button>
         </div>
@@ -64,12 +60,21 @@
     <section id="one">
       <div id="gridcon2">
         <div class="griditem">
+          <h1>Om Bloom</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at. <br />
-            <button>læs mere her</button>
+            Bloom er et kreativt samlingspunkt for skabende fællesskaber på
+            tværs af alder og interesse – et sted, hvor børn og voksne kan skabe
+            kreative produkter og udvikle idéer indenfor kunst og kreativt
+            iværksætteri. Bloom findes i KTAS' gamle telefonbygning fra 1898
+            midt i Gentofte. Historisk set har KTAS's bygninger over hele landet
+            haft en særlig betydning og blev placeret i hjertet af den enkelte
+            by, for at skabe kontakt mellem mennesker og give liv til nye
+            relationer og projekter. Hos os i Bloom fortsætter vi denne
+            tradition i en endnu mere nærværende form, hvor bygningen er rammen
+            for nye kreative og skabende fællesskaber. Hos Bloom har vi fokus på
+            de kreative relationer med de deltagende børn og voksne og på den
+            håndværksmæssige ånd som grundlag for personlig og kommerciel
+            udvikling.
           </p>
         </div>
         <div class="griditem">
@@ -79,6 +84,7 @@
     </section>
 
     <section id="4">
+      <h2>Klik her for at se vores video om Bloom</h2>
       <iframe
         width="560"
         height="315"
