--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,8 @@
 <section class="gridcon">
   <div>
-    <p>
+    <p>Adresses: <br>
     Adolphsvej 59, 1. sal  2820 Gentofte <br>
+    Telefon: <br>
     71 99 52 05</p>
   </div>
   <div>
