text og stylinge

--- a/kontakt.html
+++ b/kontakt.html
@@ -13,7 +13,7 @@
     <section class="splash">
       <img src="img/splash kontarkt.jpg" />
       <p>
-        text til splash goes HERE!!!!
+        Kontakt
       </p>
     </section>
 
