--- a/camp.html
+++ b/camp.html
@@ -12,16 +12,20 @@
     <div class="hovedmenu"></div>
     <section class="splash">
       <img src="img/splash camps.jpg" />
-      <p>splash billede text HERE!!!!</p>
+      <p>Feriecamps</p>
     </section>
     <section>
       <div class="gridcon">
         <div class="griditem">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
+            Iværksættercamp på Reffen Over 100 børn blev seje iværksættere
+            sidste sommer. Skal du være med i år? Hos BLOOM Institute bruger vi
+            ferierne til at lære børn at blive iværksættere på den fede og sjove
+            måde. Baseret på barnets lyst og motivation, skaber vi sammen
+            designs, som vi videreudvikler til reelle produkter. Vi synes, det
+            skal være lysten, der driver værket, og derfor samler vi børn med
+            ideer og godt humør i alle ferierne og har de bedste skabende uger,
+            man kan forestille sig.
           </p>
         </div>
       </div>
@@ -33,33 +37,33 @@
           <img class="underimg" src="img/aktiv1.jpg" />
         </div>
       </div>
-      <div class="griditem">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-          pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-          provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
-        </p>
-      </div>
     </section>
     <section class="prisliste">
       <div class="gridcon">
         <div class="griditem">
           <ul>
-            <li>251kr</li>
             <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              esse animi, ex maiores enim tempore quam unde nisi alias dolorem
-              assumenda pariatur natus, quos molestias magni. Non ex ea dolores.
+              Kommende feriecamps Skab dit eget tøj brand I løbet af 5 dage
+              lærer du at designe og trykke dit helt eget t-shirt- eller
+              taske-print og forstå de kunstneriske processer bag.
+            </li>
+            <li>Pris: 1200 inkl. Frokost og din egen t-shirt/taske</li>
+            <li>
+              Tid og sted: Uge 27: Refshaleøen Uge 32: BLOOM Institute, Gentofte
+              Uge 32: Refshaleøen
             </li>
           </ul>
         </div>
         <div class="griditem">
           <ul>
-            <li>251kr</li>
             <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              esse animi, ex maiores enim tempore quam unde nisi alias dolorem
-              assumenda pariatur natus, quos molestias magni. Non ex ea dolores.
+              Fra skrot til flot design design Kom og bliv én af fremtidens
+              designere, der kan forvandle skrot til fede produkter.
+            </li>
+            <li>Pris: 1200 inkl. Frokost og dit produkt</li>
+            <li>
+              Pris: 1200 inkl. Frokost og dit produkt Tid og sted: Uge 27: BLOOM
+              Institute, Gentofte Uge 28: Refshaleøen
             </li>
           </ul>
         </div>
