--- a/fritidsklub.html
+++ b/fritidsklub.html
@@ -12,59 +12,43 @@
     <div class="hovedmenu"></div>
     <section class="splash">
       <img src="img/splash fritids.jpg" />
-      <p>splash billede text goes HERE!!!!!!</p>
+      <p>Iværksætterfritidsklub</p>
     </section>
     <section>
       <div class="gridcon">
         <div class="griditem">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
+            Velkommen i Klubben I BLOOMs iværksætter fritidsklub i Gentofte
+            arbejder vi med forskellige kunstneriske udtryksformer og fede
+            materialer. Vi laver vores egne produkter, som møder verden i en
+            pop-up shop, en udstilling, forestilling, eller hvordan vi ellers
+            kan finde på det. Klubben har åbent mandag-torsdag fra kl.
+            14.00-17.00 og fredag kl. 14.00-16.00. Dagen er delt op i
+            aktiviteter, hvor den tilknyttede voksen faciliterer proces og tid.
+            Her kan børnene fordybe sig og arbejde selvstændigt. Minimum 2 gange
+            om ugen får vi besøg af en gæsteunderviser, som har planlagt et
+            længerevarende forløb fordelt på 2 ugentlige workshops for klubbens
+            deltagere. Kreative forløb Forløbene kan bl.a. være “lav din egen
+            visuelle fortælling” eller “design din egen lampe af
+            genbrugsmateriale”, hvor børnene er med til at skabe et produkt
+            (eksempelvis en film eller en lampe) og planlægge, hvordan det skal
+            vises frem. Forløbene træner børnenes erfaring med at komme fra en
+            abstrakt idé til et konkret produkt/værk. Alle workshops er
+            tilrettelagt sådan, at børnene altid går hjem med nye evner, en ny
+            kunstnerisk og håndværksmæssig erfaring og/eller et produkt, de selv
+            har designet og skabt. Med et medlemskab har børnene fri adgang til
+            klubben og alle workshops hele året. Et klippekort giver samme
+            adgang, men i begrænset omfang, idet man bruger et klip pr. gang.
           </p>
+        </div>
+        <div class="gridcon">
+          <div class="griditem">
+            <img class="underimg" src="img/aktiv3.jpg" />
+          </div>
         </div>
       </div>
     </section>
 
-    <section>
-      <div class="gridcon">
-        <div class="griditem">
-          <img class="underimg" src="img/aktiv3.jpg" />
-        </div>
-      </div>
-      <div class="griditem">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-          pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-          provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
-        </p>
-      </div>
-    </section>
-    <section class="prisliste">
-      <div class="gridcon">
-        <div class="griditem">
-          <ul>
-            <li>251kr</li>
-            <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              esse animi, ex maiores enim tempore quam unde nisi alias dolorem
-              assumenda pariatur natus, quos molestias magni. Non ex ea dolores.
-            </li>
-          </ul>
-        </div>
-        <div class="griditem">
-          <ul>
-            <li>251kr</li>
-            <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              esse animi, ex maiores enim tempore quam unde nisi alias dolorem
-              assumenda pariatur natus, quos molestias magni. Non ex ea dolores.
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
     <footer></footer>
   </body>
   <script src="main.js"></script>
