--- a/uddannelse.html
+++ b/uddannelse.html
@@ -12,16 +12,20 @@
     <div class="hovedmenu"></div>
     <section class="splash">
       <img src="img/splash_udd.jpg" />
-      <p>splash billede text goes HERE!!!!!!</p>
+      <p>Uddannelsesforløb</p>
     </section>
     <section>
       <div class="gridcon">
         <div class="griditem">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
+            Vores uddannelsesforløb bygger på børns læring ud fra kreative
+            værksteder, materialer og faciliteter inden for forskellige
+            kunstneriske udtryksformer. BLOOM Institute samarbejder med
+            professionelle kunstnere, iværksættere og det etablerede
+            erhvervsliv, når der skal laves prototyper og forretningsmodeller.
+            Efter at have oplevet stor efterspørgsel tilbyder vi nu også
+            opkvalificeringsforløb for lærere. Læs herunder om vores
+            undervisningsfaser og specifikke tilbud.
           </p>
         </div>
       </div>
@@ -33,33 +37,34 @@
           <img class="underimg" src="img/aktiv2.jpg" />
         </div>
       </div>
-      <div class="griditem">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-          pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-          provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
-        </p>
-      </div>
     </section>
     <section class="prisliste">
       <div class="gridcon">
         <div class="griditem">
           <ul>
-            <li>251kr</li>
+            <li>Valgfaget ‘Fra idé til produkt’ – elever fra 7.-9. klasse</li>
             <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              esse animi, ex maiores enim tempore quam unde nisi alias dolorem
-              assumenda pariatur natus, quos molestias magni. Non ex ea dolores.
+              I løbet af 10 gange arbejder vi med at realisere idéer gennem
+              digital produktion. Vi arbejder med kreative processer gennem 3
+              forskellige medier: print, robotteknologi og laserskæring. Fokus
+              gennem hele forløbet er at give eleverne en forståelse for,
+              hvordan en idé kan realiseres gennem digital produktion og blive
+              til et produkt, som kan reproduceres og sælges. Vi slutter af med
+              en butik med mange forskellige produkter bl.a. laserskårede
+              nøglering, drager og mobilholdere samt printet gavepapir og
+              plakater.
             </li>
           </ul>
         </div>
         <div class="griditem">
           <ul>
-            <li>251kr</li>
+            <li>‘UU-tema forløb’ – elever fra 4.-6. klasse</li>
             <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              esse animi, ex maiores enim tempore quam unde nisi alias dolorem
-              assumenda pariatur natus, quos molestias magni. Non ex ea dolores.
+              Under temaet ”mental sundhed” laver vi et forløb på 13 gange.
+              Eleverne fordyber sig først i meditation og maleaktiviteter og
+              derefter gennemgår de en proces, hvor vi på baggrund af de
+              kunstneriske processer, afkoder deres styrker, præferencer og
+              tilgang til opgaver.
             </li>
           </ul>
         </div>
