stylin og flexbosk der ikke virekr

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
     </section>
 
     <section id="icons">
-      <div id="gridcon">
+      <div class="gridcon">
         <div class="griditem">
           <img src="icons/plant.png" />
           <h3>Iværksætterfritisklub</h3>
           <p>
             Blooms private fritidsklub for børn 4. klasse og op.
           </p>
-          <button>læs mere her</button>
         </div>
         <div class="griditem">
           <img src="icons/tent.png" />
@@ -35,7 +34,6 @@
             materialer og faciliteter inden for forskellige kunstneriske
             udtryksformer i ferieperioderne.
           </p>
-          <button>læs mere her</button>
         </div>
         <div class="griditem">
           <img src="icons/books.png" />
@@ -45,7 +43,6 @@
             materialer og faciliteter inden for forskellige kunstneriske
             udtryksformer.
           </p>
-          <button>læs mere her</button>
         </div>
         <div class="griditem">
           <img src="icons/earth.png" />
@@ -53,8 +50,15 @@
           <p>
             Blooms arbejde på det globale plan.
           </p>
-          <button>læs mere her</button>
         </div>
+      </div>
+    </section>
+    <section>
+      <div class="gridcon">
+        <div class="griditem"><button>læs mere her</button></div>
+        <div class="griditem"><button>læs mere her</button></div>
+        <div class="griditem"><button>læs mere her</button></div>
+        <div class="griditem"><button>læs mere her</button></div>
       </div>
     </section>
     <section id="one">
