--- a/internationalt.html
+++ b/internationalt.html
@@ -12,58 +12,21 @@
     <div class="hovedmenu"></div>
     <section class="splash">
       <img src="img/splash_inter.jpg" />
-      <p>splash billede text goes HERE!!!!!!</p>
+      <p>Internationalt arbejde</p>
     </section>
     <section>
-      <div class="gridcon">
-        <div class="griditem">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-            pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-            provident quia aperiam eligendi totam saepe sequi quas fugit rerum
-            at.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="gridcon">
-        <div class="griditem">
-          <img class="underimg" src="img/aktiv4.jpg" />
-        </div>
-      </div>
-      <div class="griditem">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-          pariatur, obcaecati quae sunt esse maxime possimus, tempore rem
-          provident quia aperiam eligendi totam saepe sequi quas fugit rerum at.
-        </p>
-      </div>
-    </section>
-    <section class="prisliste">
-      <div class="gridcon">
-        <div class="griditem">
-          <ul>
-            <li>251kr</li>
-            <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              esse animi, ex maiores enim tempore quam unde nisi alias dolorem
-              assumenda pariatur natus, quos molestias magni. Non ex ea dolores.
-            </li>
-          </ul>
-        </div>
-        <div class="griditem">
-          <ul>
-            <li>251kr</li>
-            <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              esse animi, ex maiores enim tempore quam unde nisi alias dolorem
-              assumenda pariatur natus, quos molestias magni. Non ex ea dolores.
-            </li>
-          </ul>
-        </div>
-      </div>
+      <p>
+        BLOOM Institute i Kina Den Kinesiske stat har besluttet at omlægge fokus
+        i undervisningen af kinesiske børn. I mange år har det været præget af
+        udenadslære og effektivitet, men nu skal der kunst og innovation på
+        programmet. Vi har i den forbindelse indgået en stor aftale med
+        Shanghai-baserede FANS Group om etablering af vores uddannelseskoncepter
+        i en række kinesiske kulturcentre i perioden 2019 – 2025. Det betyder at
+        vi nu skal udvikle min. 30 Danske centre, der uddanner børn i
+        krydsfeltet mellem kunst og iværksætteri, med tilhørende uddannelse af
+        kinesiske undervisere og drift af skoleenheder tværs over Kina. Læs mere
+        om vores aktiviteter i Kina herunder.
+      </p>
     </section>
     <footer></footer>
   </body>
