stylling og opdeling af filere

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </p>
     </section>
 
-    <section id="icons">
+    <section class="icons">
       <div class="gridcon">
         <div class="griditem">
           <img src="icons/plant.png" />
@@ -62,8 +62,8 @@
         <div class="griditem"><button>læs mere her</button></div>
       </div>
     </section>
-    <section id="one">
-      <div id="gridcon2">
+    <section class="one">
+      <div class="gridcon2">
         <div class="griditem">
           <h1>Om Bloom</h1>
           <p>
