--- a/om.html
+++ b/om.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="om.css"/>
     <title></title>
   </head>
 
@@ -71,7 +72,7 @@
     </section>
   </section>
     <section class="section" id="icons">
-      <div id="gridcon">
+      <div class="gridcon">
         <div class="griditem">
           <img src="icons/art.png" />    <h3>Kunst</h3>   <p>
               
