--- a/Aktiviteter.html
+++ b/Aktiviteter.html
@@ -13,7 +13,7 @@
     <div class="hovedmenu"></div>
     <section class="splash">
       <img src="img/splash_2.png" />
-      <p>DETTE ER TEXT DER SKAL STÅ PÅ SPLASH BILLEDE</p>
+      <p>aktiviteter</p>
     </section>
     <section id="baggrund">
       <section>
