--- a/index.html
+++ b/index.html
@@ -56,10 +56,18 @@
     </section>
     <section>
       <div class="gridcon">
-        <div class="griditem"><button>læs mere her</button></div>
-        <div class="griditem"><button>læs mere her</button></div>
-        <div class="griditem"><button>læs mere her</button></div>
-        <div class="griditem"><button>læs mere her</button></div>
+        <div class="griditem">
+          <a href="fritidsklub.html"><button>læs mere her</button></a>
+        </div>
+        <div class="griditem">
+          <a href="camp.html"><button>læs mere her</button></a>
+        </div>
+        <div class="griditem">
+          <a href="uddannelse.html"><button>læs mere her</button></a>
+        </div>
+        <div class="griditem">
+          <a href="internationalt.html"><button>læs mere her</button></a>
+        </div>
       </div>
     </section>
     <section class="one">
