footer flexer med grid

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<section class="gridcon">
+<section class="gridcon_footer">
   <div>
     <p>Adresses: <br>
     Adolphsvej 59, 1. sal  2820 Gentofte <br>
