styling ændring af header og aktivtet siden

--- a/Aktiviteter.html
+++ b/Aktiviteter.html
@@ -14,10 +14,9 @@
     <section class="splash">
       <img src="img/splash_2.png" />
       <p>aktiviteter</p>
-    </section>
-    <section id="baggrund">
+    </section><section id="baggrund">
       <section>
-        <div id="gridcon">
+        <div class="gridcon">
           <div class="griditem">
            
             <p> <h2>Iværksætter Fritidsklub</h2>
@@ -44,7 +43,7 @@
       </section>
 
       <section>
-        <div id="gridcon1">
+        <div class="gridcon">
           <div class="griditem">
             <img src="img/aktiv2.jpg" />
           </div>
@@ -67,7 +66,7 @@
         </div>
       </section>
       <section>
-        <div id="gridcon2">
+        <div class="gridcon">
           <div class="griditem">
               <p>  <h2>Feriecamps</h2>
                 Hos BLOOM Institute bruger vi ferierne til at lære børn at blive
@@ -85,7 +84,7 @@
         </div>
       </section>
       <section>
-        <div id="gridcon3">
+        <div class="gridcon">
           <div class="griditem">
             <img src="img/aktiv4.jpg" />
           </div>
