--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
   <div class="dropdownc">
     <a href="camp.html">Camps</a>
     <a href="fritidsklub.html">Fritidsklub</a>
-    <a href="uddannelse.html">Uddannelse af lærer</a>
+    <a href="uddannelse.html">Uddannelseforløb</a>
     <a href="internationalt.html">Internationalt arbejde</a>
   </div>
 </div>
