--- a/kontakt.html
+++ b/kontakt.html
@@ -1,94 +1,127 @@
 <!DOCTYPE html>
 <html lang="en" id="kontakt">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="kontakt.css" />
     <title></title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-        <img src="img/splash kontarkt.jpg" />
-        <p>
-            Kontakt
-        </p>
+      <img src="img/splash kontarkt.jpg" />
+      <p>
+        Kontakt
+      </p>
     </section>
     <section id="addresse">
-        <p>Bloom Institute har beliggenhed ved</p> <address>Adolphsvej 59, 1. sal 2820 Gentofte</address>
-
-
+      <p>Bloom Institute har beliggenhed ved</p>
+      <address>Adolphsvej 59, 1. sal 2820 Gentofte</address>
     </section>
     <section id="team">
-        <h1>Team
-        </h1>
-        <p>Vi er et passioneret hold af undervisningseksperter, iværksættere og ledere.
-        </p>
+      <h1>Team</h1>
+      <p>
+        Vi er et passioneret hold af undervisningseksperter, iværksættere og
+        ledere.
+      </p>
     </section>
     <section id="icons">
-        <div class="gridcon">
-            <div class="griditem">
-                <img src="img/JuliePi.png" />
-                <h3> Julie Pi, Co-Founder & Partner</h3>
-                <p>
-                    Gennem hele sin karriere har Julie arbejdet med udviklingen af individuelle og organisatoriske potentialer. Hun har opbygget både virksomheder, communities, platforme og sammenhængende systemer. Julie fokuserer især på fysiske miljøer, og har tidligere udviklet inkubationsmiljøet Vækstfabrikkerne. Oprindeligt er hun uddannet blokfløjtenist, og efter 10 år som professionel musiker og underviser var hun nysgerrig efter at finde ud af, hvilken betydning kunst og kreativitet har for vores samfund, for menneskers udvikling og hvordan det kan implementeres i praksis.
-                </p>
-                <br>
-                <p>Kontakt: Tlf: +45 22 41 10 55 Mail: juliepi@cfki.nu
-
-                </p>
-            </div>
-            <div class="griditem">
-                <img src="img/KarinaRothhoffBrix.png" />
-                <h3> Karina Rothoff Brix, Co-Founder & Partner</h3>
-                <p>
-                    Karina er uddannet cand.merc.jur og har en master i ledelsesudvikling. Gennem hele sin karriere har hun skabt nye organisationer og tiltag indenfor iværksætteri. Siden 2009 har hun opbygget CBSs store center for praktisk iværksætteri kaldet Copenhagen School of Entrepreneurship. Karina har stor erfaring med uddannelsesprogrammer, forskning indenfor iværksætteri, administration af store puljer og fondsmidler. Ligeledes sidder hun i Innovation-Fondens investeringspanel og er bestyrelsesmedlem i universitetstiltag som Venture Cup og CBSSTARTUP.DK </p>
-                <br>
-                <p> Kontakt: Tlf: +45 61 77 21 47 Mail: karina@cfki.nu
-
-                </p>
-            </div>
-            <div class="griditem">
-                <img src="img/Soren.png" />
-                <h3>Søren Nørgaard, Partner</h3>
-                <p>
-                    Søren er mangeårig iværksætter og forretningsudvikler, der altid har gået sine egne veje. Som iværksætter lancerede han den første Europæiske indsamlingsplatform, CAREMAKER, der med stor success gjorde det muligt at starte indsamlinger til formål, man bekymrer sig om. Her formåede de at åbne i 6 lande og samle mere end 40M kr. ind. Derudover har han arbejdet med forretningsudvikling i Shanghai og senest i Silicon Valley for en Dansk tech virksomhed. Han har et globalt udsyn og tror på at vigtige resultater og læring åbnes gennem kulturel udveksling.</p>
-                <br>
-                <p> Kontakt: Tlf: +45 61 33 91 94 Mail: soren@cfki.nu
-
-                </p>
-            </div>
+      <div class="gridcon">
+        <div class="griditem">
+          <img src="img/JuliePi.png" />
+          <h3>Julie Pi, Co-Founder & Partner</h3>
+          <p>
+            Gennem hele sin karriere har Julie arbejdet med udviklingen af
+            individuelle og organisatoriske potentialer. Hun har opbygget både
+            virksomheder, communities, platforme og sammenhængende systemer.
+            Julie fokuserer især på fysiske miljøer, og har tidligere udviklet
+            inkubationsmiljøet Vækstfabrikkerne. Oprindeligt er hun uddannet
+            blokfløjtenist, og efter 10 år som professionel musiker og
+            underviser var hun nysgerrig efter at finde ud af, hvilken betydning
+            kunst og kreativitet har for vores samfund, for menneskers udvikling
+            og hvordan det kan implementeres i praksis.
+          </p>
+          <br />
+          <p>Kontakt: Tlf: +45 22 41 10 55 Mail: juliepi@cfki.nu</p>
         </div>
+        <div class="griditem">
+          <img src="img/KarinaRothhoffBrix.png" />
+          <h3>Karina Rothoff Brix, Co-Founder & Partner</h3>
+          <p>
+            Karina er uddannet cand.merc.jur og har en master i
+            ledelsesudvikling. Gennem hele sin karriere har hun skabt nye
+            organisationer og tiltag indenfor iværksætteri. Siden 2009 har hun
+            opbygget CBSs store center for praktisk iværksætteri kaldet
+            Copenhagen School of Entrepreneurship. Karina har stor erfaring med
+            uddannelsesprogrammer, forskning indenfor iværksætteri,
+            administration af store puljer og fondsmidler. Ligeledes sidder hun
+            i Innovation-Fondens investeringspanel og er bestyrelsesmedlem i
+            universitetstiltag som Venture Cup og CBSSTARTUP.DK
+          </p>
+          <br />
+          <p>Kontakt: Tlf: +45 61 77 21 47 Mail: karina@cfki.nu</p>
+        </div>
+        <div class="griditem">
+          <img src="img/Soren.png" />
+          <h3>Søren Nørgaard, Partner</h3>
+          <p>
+            Søren er mangeårig iværksætter og forretningsudvikler, der altid har
+            gået sine egne veje. Som iværksætter lancerede han den første
+            Europæiske indsamlingsplatform, CAREMAKER, der med stor success
+            gjorde det muligt at starte indsamlinger til formål, man bekymrer
+            sig om. Her formåede de at åbne i 6 lande og samle mere end 40M kr.
+            ind. Derudover har han arbejdet med forretningsudvikling i Shanghai
+            og senest i Silicon Valley for en Dansk tech virksomhed. Han har et
+            globalt udsyn og tror på at vigtige resultater og læring åbnes
+            gennem kulturel udveksling.
+          </p>
+          <br />
+          <p>Kontakt: Tlf: +45 61 33 91 94 Mail: soren@cfki.nu</p>
+        </div>
+      </div>
     </section>
 
     <section id="form">
-        <form>
-            <label for="fname">Fornavn</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name.." />
+      <form>
+        <label for="fname">Fornavn</label>
+        <input
+          type="text"
+          id="fname"
+          name="firstname"
+          placeholder="Your name.."
+        />
 
-            <label for="lname">Efternavn</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name.." />
+        <label for="lname">Efternavn</label>
+        <input
+          type="text"
+          id="lname"
+          name="lastname"
+          placeholder="Your last name.."
+        />
 
-            <label for="country">Land</label>
-            <select id="country" name="country">
+        <label for="country">Land</label>
+        <select id="country" name="country">
           <option value="australia">Australia</option>
           <option value="canada">Canada</option>
           <option value="usa">USA</option>
         </select>
 
-            <label for="subject">Emne</label>
-            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+        <label for="subject">Emne</label>
+        <textarea
+          id="subject"
+          name="subject"
+          placeholder="Write something.."
+          style="height:200px"
+        ></textarea>
 
-            <input type="submit" value="Submit" />
-        </form>
+        <input type="submit" value="Submit" />
+      </form>
     </section>
 
     <footer></footer>
-</body>
-<script src="main.js"></script>
-
+  </body>
+  <script src="main.js"></script>
 </html>
