tre af billerne til international siden er fundt og set ind

--- a/internationalt.html
+++ b/internationalt.html
@@ -32,7 +32,7 @@
             
           </div>
           <div class="griditem">
-            <img src="icon.png" />
+            <img src="img/inta1.jpg" />
           </div>
         </div>
       </section>
@@ -40,7 +40,7 @@
       <section>
         <div class="gridcon">
           <div class="griditem">
-            <img src="icon.png" />
+            <img src="img/inta2.jpg" />
           </div>
 
           <div class="griditem">
@@ -70,7 +70,7 @@
               
           </div>
           <div class="griditem">
-            <img src="icon.png" />
+            <img src="img/inta3.jpg" />
           </div>
         </div>
       </section>
